RESOLVED FIXED310075
[Site Isolation] AutofillLoginCredentials is broken when the focused element is inside a cross-origin iframe on iOS
https://bugs.webkit.org/show_bug.cgi?id=310075
Summary [Site Isolation] AutofillLoginCredentials is broken when the focused element ...
zak ridouh
Reported 2026-03-16 21:49:14 PDT
AutofillLoginCredentials is broken when the focused element is inside a cross-origin iframe on iOS. Fix it.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-16 21:49:20 PDT
zak ridouh
Comment 2 2026-03-16 22:20:48 PDT
EWS
Comment 3 2026-06-04 16:19:40 PDT
Committed 314590@main (0ceb62a4c91a): <https://commits.webkit.org/314590@main> Reviewed commits have been landed. Closing PR #60745 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.