[Site Isolation] AutofillLoginCredentials is broken when the focused element is inside a cross-origin iframe on iOS https://bugs.webkit.org/show_bug.cgi?id=310075 rdar://172718686

Reviewed by Alex Christensen.

autofillLoginCredentials() sends the AutofillLoginCredentials IPC message
to m_legacyMainFrameProcess, which is the wrong process when the focused
element lives in a site-isolated cross-origin iframe. This breaks
autofill credential selection for login forms in embedded cross-origin
iframes — a very common pattern for payment and authentication flows.

Pass the focused element's frame identifier through to
sendToProcessContainingFrame(), matching the pattern already used by
SetFocusedElementValue, SetFocusedElementSelectedIndex, and
SetSelectElementIsOpen.

* LayoutTests/TestExpectations:
* LayoutTests/http/tests/site-isolation/autofill-credentials-in-cross-origin-iframe-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/autofill-credentials-in-cross-origin-iframe.html: Added.
* LayoutTests/http/tests/site-isolation/resources/autofill-credentials-iframe.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView insertTextSuggestion:]):
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::autofillLoginCredentials):

Canonical link: https://commits.webkit.org/314590@main